# dbt-snowflake-iceberg-sync

./: .dbtignore  .gitignore  AGENTS.md  CHANGELOG.md  README.md  dbt_project.yml  mise.toml  pyproject.toml
.github/: FUNDING.yml
.github/workflows/: ci.yml  integration-approval.yml  integration.yml  lint.yml  release.yml
docs/: securefix.md
docs/design/: s3_parquet_source.md
macros/iceberg_sync/: config.sql  identifiers.sql  install.sql  json.sql  orchestration.sql  relations.sql  validation.sql
macros/materializations/: iceberg_sync.sql
procedure/: __init__.py  config.py  errors.py  gcp_auth.py  google_cloud_auth.py  handler.py  run_log.py  schema.py  snowflake.py  sql.py  utils.py
procedure/sources/: __init__.py  base.py  bigquery.py  registry.py  s3_parquet.py
tests/: __init__.py
tests/ci_profiles/: profiles.yml
tests/integration/: README.md  __init__.py  dbt_project.yml  test_dbt_iceberg_sync.py  test_integration_guard.py  test_s3_parquet_sync.py  test_wif_auth.py  test_workload_identity_federation_auth.py
tests/unit/: conftest.py  test_bigquery.py  test_config.py  test_dbt_deployment_vars.py  test_dbt_parse.py  test_gcp_auth.py  test_google_cloud_auth.py  test_handler.py  test_macros.py  test_materialization_runtime.py  test_project_metadata.py  test_run_log.py  test_s3_parquet.py  test_schema.py  test_snowflake.py  test_source_registry.py  test_sql.py
