[project]
name = "dbt-snowflake-iceberg-sync-tests"
version = "0.1.0"
description = "Test tooling for dbt-snowflake-iceberg-sync"
requires-python = ">=3.10"
dependencies = [
    "dbt-core>=1.10,<2.0",
    "dbt-duckdb>=1.10,<2.0",
    "google-auth>=2.29",
    "pytest>=8.0",
    "requests>=2.0",
]

[dependency-groups]
# Only needed for live integration tests that open a real Snowflake session.
# Install with: uv sync --group integration
integration = [
    "snowflake-snowpark-python>=1.20",
]

[tool.uv]
package = false

[tool.pytest.ini_options]
testpaths = ["tests/unit", "tests/integration"]
markers = [
    "integration: tests that require live Snowflake, BigQuery, and GCS resources",
]
