[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "dbt-snowflake-iceberg-sync"
version = "0.5.2"
description = "dbt materialization for syncing external data into Snowflake-managed Iceberg tables."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Apache-2.0" }
authors = [{ name = "dbt-snowflake-iceberg-sync contributors" }]
dependencies = []

[dependency-groups]
dev = [
  "dbt-core>=1.10,<1.11",
  "dbt-snowflake>=1.10,<1.11",
  "google-auth>=2.29",
  "packaging>=24",
  "pytest>=8",
  "PyYAML>=6",
  "ruff>=0.5",
]

[project.optional-dependencies]
dev = [
  "google-auth>=2.29",
  "packaging>=24",
  "pytest>=8",
  "PyYAML>=6",
  "ruff>=0.5",
]
integration = [
  "dbt-core>=1.10,<1.11",
  "dbt-snowflake>=1.10,<1.11",
  "google-auth>=2.29",
]

[tool.setuptools]
packages = ["procedure", "procedure.sources"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
  "integration: tests requiring live Snowflake, BigQuery, and GCS resources",
]
addopts = "-ra"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
